feat(ci): add output

--- a/.github/actions/vars/action.yaml
+++ b/.github/actions/vars/action.yaml
@@ -6,3 +6,6 @@ runs:
   steps:
     - run: echo "ACTION32='action-thirtytwo'" >> "${GITHUB_ENV}"
       shell: bash
+
+    - run: echo "ACTION33='action-thirtythree'" >> "${GITHUB_OUTPUT}"
+      shell: bash
